overflow problem fixed

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -40,7 +40,7 @@
 html,
 body {
     width: 100vw;
-    // overflow-x: hidden;
+    overflow-x: hidden;
     padding: 0%;
     // Body Flexed 
     display: flex;
